# Rust-Example

./: Cargo.toml  README.md
actrix-web/: Cargo.toml
actrix-web/src/: main.rs  main_test.rs
cli/: Cargo.toml
cli/src/: main.rs
diesel_demo/: Cargo.toml  README.md
diesel_demo/migrations/2021-12-04-175847_create_posts/: up.sql
diesel_demo/src/: lib.rs  models.rs
hyper-server/: Cargo.toml
hyper-server/src/: main.rs
pgsql/: Cargo.toml  README.md
pgsql/src/: main.rs
snake/: Cargo.toml  README.md
snake/src/: _main.rs  draw.rs  game.rs  main.rs  snake.rs
src/: draw.rs  main.rs  snake.rs
tokio-hyper/: Cargo.toml  README.md
tokio-hyper/src/: main.rs
