[package]
name = "hello-world"
version = "0.1.0"
authors = ["Rock <rockcreation7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"